fixed error in matplotlib image test framework, regenerated baselines

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 max-line-length=119
 
 [tool:pytest]
-addopts = --cov-report term-missing --cov librosa --disable-pytest-warnings
+addopts = --cov-report term-missing --cov librosa --disable-pytest-warnings --mpl --mpl-baseline-path=tests/baseline_images/test_display
 filterwarnings =
     ignore:Using a non-tuple sequence:FutureWarning:scipy.*
 
