--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 sudo: false
 
-dist: xenial
-
 cache:
   directories:
   - $HOME/env
@@ -15,7 +13,12 @@ python:
     - 2.7
     - 3.5
     - 3.6
-    - 3.7
+
+matrix:
+    include:
+        - python: 3.7
+          dist: xenial
+
 
 before_install:
     - bash .travis_dependencies.sh
