--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,14 @@ notifications:
   email: false
 
 python:
-    - 2.7
     - 3.5
     - 3.6
 
 matrix:
     include:
         - python: 3.7
+          dist: xenial
+        - python: 3.8
           dist: xenial
 
 
