--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,7 @@ install:
   - "IF NOT EXIST %MINICONDA%\\envs\\test-environment-%PYTHON_VERSION% conda create -q -n test-environment-%PYTHON_VERSION% python=%PYTHON_VERSION% numpy scipy coverage scikit-learn!=0.19.0 numba"
   - "activate test-environment-%PYTHON_VERSION%"
   - conda info -a
+  - conda install freetype==2.9
   - conda install -c conda-forge ffmpeg
   - pip install -e .[tests]
 
