--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: false
-
 cache:
   directories:
   - $HOME/env
@@ -9,17 +7,21 @@ language: python
 notifications:
   email: false
 
-python:
-    - 3.6
-
-matrix:
+jobs:
     include:
-        - python: 3.7
+        - python: 3.6
+          os: linux
           dist: xenial
+        - python: 3.7
+          os: linux
+          dist: xenial
+        - os: osx
+          language: generic
+          osx_image: xcode11
 
 before_install:
     - bash .travis_dependencies.sh
-    - export PATH="$HOME/env/miniconda$TRAVIS_PYTHON_VERSION/bin:$PATH";
+    - export PATH="$HOME/env/miniconda-$TRAVIS_OS_NAME$TRAVIS_PYTHON_VERSION/bin:$PATH";
     - hash -r
     - source activate test-environment
     - conda list
