updating setup and travis for python 3.8 (#1110)

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ jobs:
         - python: 3.7
           os: linux
           dist: bionic
+        - python: 3.8
+          os: linux
+          dist: bionic
         - os: osx
           language: generic
           osx_image: xcode11
