[CR needed] fixed #1111 - revised stack_memory and tests (#1112)
* fixed #1111 - revised stack_memory and tests

* fixed an error with empty input data

* fixed package caching in travis config

* fixed package caching in travis config on osx

* travis config fixes

* one more cut at travis caching brew bottles

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 cache:
+  apt: True
   directories:
   - $HOME/env
+  - $HOME/Library/Caches/Homebrew
 
 language: python
 
@@ -22,12 +24,24 @@ jobs:
           language: generic
           osx_image: xcode11
 
+addons:
+    apt:
+        packages:
+        - libsamplerate0
+
+    homebrew:
+        packages:
+        - libsamplerate
+
 before_install:
     - bash .travis_dependencies.sh
     - export PATH="$HOME/env/miniconda-$TRAVIS_OS_NAME$TRAVIS_PYTHON_VERSION/bin:$PATH";
     - hash -r
     - source activate test-environment
     - conda list
+
+before_cache:
+    - brew cleanup
 
 install:
     # install your own package into the environment
