--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ install:
   - "IF NOT EXIST %MINICONDA%\\envs\\test-environment-%PYTHON_VERSION% conda create -q -n test-environment-%PYTHON_VERSION% python=%PYTHON_VERSION% numpy scipy coverage scikit-learn!=0.19.0 numba"
   - "activate test-environment-%PYTHON_VERSION%"
   - conda info -a
-  - conda install -c conda-forge ffmpeg
+  - conda install -c conda-forge ffmpeg "freetype>=2.10"
   - pip install -e .[tests]
 
 test_script:
