trying to fix some CI issues (#1308)
* trying to fix some CI issues

* trying libsndfile from conda-forge

* optionally fail image tests on old freetype builds

* stricting tests by default

* installing libsndfile via apt instead, maybe that will work

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ max-line-length=119
 
 [tool:pytest]
 addopts = --cov-report term-missing --cov librosa --disable-pytest-warnings --mpl --mpl-baseline-path=tests/baseline_images/test_display
+xfail_strict = true
 filterwarnings =
     ignore:Using a non-tuple sequence:FutureWarning:scipy.*
 
