--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,7 @@
 max-line-length=119
 
 [tool:pytest]
-addopts = --cov-report term-missing --cov librosa --disable-pytest-warnings --mpl --mpl-baseline-path=tests/baseline_images/test_display
+addopts = --cov-report term-missing --cov librosa --cov-report=xml --disable-pytest-warnings --mpl --mpl-baseline-path=tests/baseline_images/test_display
 xfail_strict = true
 filterwarnings =
     ignore:Using a non-tuple sequence:FutureWarning:scipy.*
-
