--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
             matrix:
                 include:
                     - os: ubuntu-18.04
+                      python-version: 3.6
+
+                    - os: ubuntu-18.04
                       python-version: 3.7
 
                     - os: ubuntu-latest
