--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,79 @@
 [pycodestyle]
 max-line-length=119
+ignore = E203,W503
 
 [tool:pytest]
 addopts = --cov-report term-missing --cov librosa --cov-report=xml --disable-pytest-warnings --mpl --mpl-baseline-path=tests/baseline_images/test_display
 xfail_strict = true
 filterwarnings =
     ignore:Using a non-tuple sequence:FutureWarning:scipy.*
+
+[metadata]
+name = librosa
+description = Python module for audio and music processing
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8
+url = https://librosa.org
+author = Brian McFee, librosa development team
+author_email = brian.mcfee@nyu.edu
+license = ISC
+license_file = LICENSE.md
+license_file_content_type = text/markdown; charset=UTF-8
+project_urls =
+    Documentation = https://librosa.org/doc
+    Download = https://github.com/librosa/librosa/releases
+    Source = https://github.com/librosa/librosa
+    Tracker = https://github.com/librosa/librosa/issues
+classifiers = 
+    License :: OSI Approved :: ISC License (ISCL)
+    Programming Language :: Python
+    Development Status :: 3 - Alpha
+    Intended Audience :: Developers
+    Topic :: Multimedia :: Sound/Audio :: Analysis
+    Framework :: Matplotlib
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+
+[options]
+packages = find:
+include_package_data = True
+install_requires =
+    audioread >= 2.0.0
+    numpy >= 1.15.0
+    scipy >= 1.0.0
+    scikit-learn >= 0.14.0, != 0.19.0
+    joblib >= 0.14
+    decorator >= 3.0.0
+    resampy >= 0.2.2
+    numba >= 0.43.0
+    soundfile >= 0.10.2
+    pooch >= 1.0
+    packaging >= 20.0
+python_requires = >=3.6
+
+[options.package_data]
+librosa = util/example_data/*
+
+[options.extras_require]
+docs =
+    numpydoc
+    sphinx != 1.3.1
+    sphinx_rtd_theme==0.5.*
+    numba < 0.50
+    matplotlib >= 2.0.0, < 3.3
+    sphinx-multiversion >= 0.2.3
+    sphinx-gallery >= 0.7
+    spinxcontrib-svg2pdfconverter
+    presets
+tests =
+    matplotlib >= 3.0
+    pytest-mpl
+    pytest-cov
+    pytest
+    contextlib2
+    samplerate
+display =
+    matplotlib >= 1.5
