--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,8 @@
 name: Publish Python 🐍 distributions 📦 to PyPI and TestPyPI
 
 on: 
-  push:
-    branches:
-      - main
+  release:
+    types: [created] 
 
 jobs:
   build-n-publish:
