added google groups link to package info

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ project_urls =
     Download = https://github.com/librosa/librosa/releases
     Source = https://github.com/librosa/librosa
     Tracker = https://github.com/librosa/librosa/issues
+    Discussion forum = https://groups.google.com/g/librosa
 classifiers = 
     License :: OSI Approved :: ISC License (ISCL)
     Programming Language :: Python
