--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/data"]
 	path = tests/data
-	url = git://github.com/librosa/librosa-test-data.git
+	url = https://github.com/librosa/librosa-test-data.git
