--- a/.github/environment-minimal.yml
+++ b/.github/environment-minimal.yml
@@ -26,6 +26,9 @@ dependencies:
   - coverage
   - ffmpeg
   - tomli<2.0
+
+  # For python 3.6 we limit this dependency
+  - typing-extensions<4.2
   - pip:
     - soxr
     - samplerate
