updating codespell and corrections (#1557)
* updating codespell and corrections

* codespell syntax

* skip changelog as well

* skip changelog as well

--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -8,6 +8,6 @@ jobs:
       - uses: actions/setup-python@v2
       - run: pip install bandit codespell flake8 velin
       - run: bandit --recursive --skip B101,B110 .
-      - run: codespell --ignore-words-list="ba,trough,ue" --skip="*demo.ipynb"
+      - run: codespell --ignore-words-list="ba,trough,ue" --skip="*demo.ipynb,./AUTHORS.md,./docs/changelog.rst"
       - run: flake8 librosa --count --select=E9,F63,F7,F82 --show-source --statistics
       - run: python -m velin --check librosa
