--- a/setup.cfg
+++ b/setup.cfg
@@ -49,11 +49,11 @@ install_requires =
     scikit-learn >= 0.19.1
     joblib >= 0.14
     decorator >= 4.0.10
-    resampy >= 0.2.2
     numba >= 0.45.1
     soundfile >= 0.10.2
     pooch >= 1.0
     packaging >= 20.0
+    soxr >= 0.3.0
 python_requires = >=3.6
 
 [options.package_data]
@@ -79,6 +79,6 @@ tests =
     pytest
     contextlib2
     samplerate
-    soxr
+    resampy >= 0.2.2
 display =
     matplotlib >= 3.3.0
