--- a/.github/environment-docs.yml
+++ b/.github/environment-docs.yml
@@ -12,6 +12,7 @@ dependencies:
   - joblib>=0.14.0
   - decorator>=4.0.10
   - resampy>=0.2.2
+  - soxr-python>=0.3.0
   - numba<0.50
   - numpydoc>=1.1.0
   - ipython>=7.0
