--- a/.github/environment-docs.yml
+++ b/.github/environment-docs.yml
@@ -5,22 +5,22 @@ channels:
 dependencies:
   # required
   - pip
-  - audioread>=2.1.5
-  - numpy<1.18
+  - audioread>=2.1.9
+  - numpy>=1.20.3
   - scipy>=1.2.0
-  - scikit-learn>=0.19.1
+  - scikit-learn>=0.20.0
   - joblib>=0.14.0
-  - decorator>=4.0.10
+  - decorator>=4.3.0
   - resampy>=0.2.2
-  - soxr-python>=0.3.0
-  - numba<0.50
+  - soxr-python>=0.3.2
+  - numba>=0.51.0
   - numpydoc>=1.1.0
   - ipython>=7.0
   - pysoundfile>=0.10.2
   - pooch>=1.0.0
   - packaging>=20.0
-  - matplotlib<3.5
-  - sphinx==4.5.0
+  - matplotlib>=3.5
+  - sphinx>=5.1.0
   - sphinx-gallery>=0.10.1
   - sphinx_rtd_theme>=1.0.0
   - ffmpeg
