--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ docs =
     numpydoc
     sphinx != 1.3.1
     sphinx_rtd_theme==1.*
-    numba < 0.50
+    numba >= 0.51
     matplotlib >= 3.3.0
     sphinx-multiversion >= 0.2.3
     sphinx-gallery >= 0.7
