--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ install_requires =
     pooch >= 1.0
     packaging >= 20.0
     soxr >= 0.3.2
+    lazy_loader >= 0.1
 python_requires = >=3.7
 
 [options.package_data]
