--- a/.github/environment-docs.yml
+++ b/.github/environment-docs.yml
@@ -23,6 +23,7 @@ dependencies:
   - sphinx>=5.1.0
   - sphinx-gallery>=0.10.1
   - sphinx_rtd_theme>=1.0.0
+  - lazy_loader>=0.1
   - ffmpeg
   - pip:
     - sphinx-multiversion==0.2.4
