--- a/.github/environment-docs.yml
+++ b/.github/environment-docs.yml
@@ -21,6 +21,7 @@ dependencies:
   - packaging>=20.0
   - matplotlib>=3.5
   - sphinx>=5.1.0
+  - msgpack-python>=1.0
   - sphinx-gallery>=0.10.1
   - sphinx_rtd_theme>=1.0.0
   - lazy_loader>=0.1
