--- a/setup.cfg
+++ b/setup.cfg
@@ -55,10 +55,14 @@ install_requires =
     packaging >= 20.0
     soxr >= 0.3.2
     lazy_loader >= 0.1
+    msgpack >= 1.0
+
 python_requires = >=3.7
 
 [options.package_data]
-librosa = util/example_data/*
+librosa =
+    util/example_data/*
+    core/intervals.pickle
 
 [options.extras_require]
 docs =
