--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,7 @@ python_requires = >=3.7
 [options.package_data]
 librosa =
     util/example_data/*
-    core/intervals.pickle
+    core/intervals.msgpack
 
 [options.extras_require]
 docs =
