Add type annotations (#1587)
* Add type annotations auto-generated from docstrings

* Fix typings and undo formatting changes

* Fix test typings

* Fix typings from tests

* Add py.typed

* Fix more types

* Fix all Pylance issues in tests

* Fix mypy errors in tests

* Add typing for decorators

* Add missing types and make importable on older Python

* Remove temp file

* Fix preemphasis

* Fix mypy errors in tests

* Undo formatting change

* Fix typings

* Undo formatting change

* Improve test typing

* Undo formatting change

* compat

* mypy.ini

* Type fixes

* Add missing reexport

* Add overloads

* Clean up

* Clean up

* Clean up

* Fix missing name

* Fix missing name

* Exclude unreachable typing code from code coverage

* Update librosa/display.py

* List[str] -> _IterableLike[str]

* Typing fixes

* Add mypy to lint CI

* Add overloads

* Install dependencies for mypy

* Remove erroneous import

* Add _ResampleType

* Accept scalar or array

* Add PathLike

* Add overloads for interval_to_fjs

* Frames are int

* Add _PadMode

* *.typed -> py.typed

* fdesc -> _fdesc

* Remove __all__

* Better literal syntax

* Remove Literal where it doesn't affect return type

* Fix TypeError on Python < 3.9

* Remove unused 'type: ignore'

* Address review comments

* Add overloads

* norm is optional

* cast -> np.asarray

Co-authored-by: Brian McFee <bmcfee@users.noreply.github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,14 +54,17 @@ install_requires =
     pooch >= 1.0
     packaging >= 20.0
     soxr >= 0.3.2
+    typing_extensions >= 4.0.0
     lazy_loader >= 0.1
     msgpack >= 1.0
 
 python_requires = >=3.7
+zip_safe = False
 
 [options.package_data]
 librosa =
     util/example_data/*
+    py.typed
     core/intervals.msgpack
 
 [options.extras_require]
