Parabolic interpolation speedup for yin (#1617)
* fixed #1608, accelerated parabolic interpolation

* cleanup

* linting

* linting

* expanded coverage skips for numba compiled functions

* docstrings

* fixed a bad type

* sped up piptrack

* updated piptrack error test

--- a/.coveragerc
+++ b/.coveragerc
@@ -8,6 +8,9 @@ omit =
 exclude_lines =
     @numba.jit
     @jit
+    @numba.stencil
+    @numba.guvectorize
+    @numba.vectorize
     pragma: no cover
     if TYPE_CHECKING:
     @overload
