updated cache action to v3 (#1631)
* updated cache action to v3

* updated checkout action to v3

* bumping setup-python action

* bumping setup-python action with python version

* bumping setup-python action with python version

* adding dependency caching to linter

* factoring out lint ci dependencies

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v3
     - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         python-version: 3.7
 
