--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -4,9 +4,13 @@ jobs:
   lint_python:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - run: pip install bandit codespell flake8 velin mypy pytest numpy
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          cache: 'pip'
+          cache-dependency-path: '**/requirements-lint.txt'
+      - run: pip install -r .github/requirements-lint.txt
       - run: bandit --recursive --skip B101,B110 .
       - run: codespell --ignore-words-list="ba,trough,ue" --skip="*demo.ipynb,./AUTHORS.md,./docs/changelog.rst"
       - run: flake8 librosa --count --select=E9,F63,F7,F82 --show-source --statistics
