[CR] Type annotations continued (#1632)
* adding typing_extensions to CI configs

* fixed type annotations in cache

* added numpy typing plugin to mypy config

* Revert "fixed type annotations in cache"

This reverts commit f5d13dc88fa61214998e9c7f548c3a7dee85544c.

* fixing type checks in util/files

* making progress on type checks

* hacking through types some more

* small typing cleanups

* reverting some typehint changes

* progress on type hints

* progress on type hints

* intervals required in chroma vqt

* added overload for frames_to_samples

* some more silly changes to make mypy happy

* fixing some type issues, modernizing rng usage in glcqt

* modernizing rng in griffinlim

* chipping away at typing errors

* typing continues

* typing continues

* type hacking

* type hacking

* typing typing typing

* progress on type hints

* this is tedious

* fixing test failures

* codespell

* progress on utils submodule

* progress on utils submodule

* utils passes clean now

* util.matching validates

* progress on utils submodule

* working on feature submodule

* working on audio submodule

* intervals validate

* notation validates

* adding package mypy to linting action

* progress on core

* harmonic passes

* core progress

* sequence passes

* core.convert passes

* audio validates

* fixing length issue in chirp

* cleaning up spectrum

* cqt passes

* more typing cleanups in core

* typing progress

* feature spectral

* cleanups in cqt

* more typing cleanups

* making progress

* digging into display module

* restricted padding mode type annotations where appropriate

* more padding mode business

* fixed py37 error

* fixed decorator type annotations

* suppressing inheritence type checks for matplotlib

* almost there

* type checking passes on dev machine

* forcing lint action to run on numpy 1.20.3

* removing some redundant checks

* reverting lint env

* fixed some broken tests

* cleaning up tests

* working on test coverage

* working 

--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -2,17 +2,66 @@ name: lint_python
 on: [pull_request, push]
 jobs:
   lint_python:
+    name: "Lint and code analysis"
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          - os: ubuntu-latest
+            python-version: "3.8"
+            channel-priority: "flexible"
+            envfile: ".github/environment-lint.yml"
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-          cache: 'pip'
-          cache-dependency-path: '**/requirements-lint.txt'
-      - run: pip install -r .github/requirements-lint.txt
-      - run: bandit --recursive --skip B101,B110 .
-      - run: codespell --ignore-words-list="ba,trough,ue" --skip="*demo.ipynb,./AUTHORS.md,./docs/changelog.rst"
-      - run: flake8 librosa --count --select=E9,F63,F7,F82 --show-source --statistics
-      - run: python -m velin --check librosa
-      - run: python -m mypy tests --config-file=tests/mypy.ini
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Cache conda
+      uses: actions/cache@v3
+      env:
+        CACHE_NUMBER: 0
+      with:
+        path: ~/conda_pkgs_dir
+        key: ${{ runner.os }}-${{ matrix.python-version }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles( matrix.envfile ) }}
+    - name: Install conda environmnent
+      uses: conda-incubator/setup-miniconda@v2
+      with: 
+        auto-update-conda: false
+        python-version: ${{ matrix.python-version }}
+        add-pip-as-python-dependency: true
+        auto-activate-base: false
+        activate-environment: lint
+        mamba-version: "*"
+        channel-priority: ${{ matrix.channel-priority }}
+        environment-file: ${{ matrix.envfile }}
+        use-only-tar-bz2: true
+
+    - name: Conda info
+      shell: bash -l {0}
+      run: |
+        conda info -a
+        conda list
+
+    - name: Spell check
+      shell: bash -l {0}
+      run: codespell --ignore-words-list="ba,trough,ue" --skip="*demo.ipynb,./AUTHORS.md,./docs/changelog.rst"
+
+    - name: Security check
+      shell: bash -l {0}
+      run: bandit --recursive --skip B101,B110 .
+
+    - name: Style check
+      shell: bash -l {0}
+      run: flake8 librosa --count --select=E9,F63,F7,F82 --show-source --statistics
+    
+    - name: Docstring check  
+      shell: bash -l {0}
+      run: python -m velin --check librosa
+    
+    - name: Type check package
+      shell: bash -l {0}
+      run: python -m mypy --pretty librosa
+    
+    - name: Type check tests
+      shell: bash -l {0}
+      run: python -m mypy --pretty tests
