--- a/setup.cfg
+++ b/setup.cfg
@@ -87,5 +87,63 @@ tests =
     pytest
     samplerate
     resampy >= 0.2.2
+    types-decorator
 display =
     matplotlib >= 3.3.0
+
+
+[mypy]
+check_untyped_defs = True
+allow_redefinition = True
+follow_imports = silent
+strict = True
+disallow_untyped_defs = False
+disallow_incomplete_defs = False
+disallow_untyped_calls = False
+disallow_any_generics = False
+disallow_subclassing_any = False
+plugins = numpy.typing.mypy_plugin
+
+; Ignore libraries for which no type annotations are available.
+[mypy-scipy.*]
+ignore_missing_imports = True
+
+[mypy-soundfile.*]
+ignore_missing_imports = True
+
+[mypy-audioread.*]
+ignore_missing_imports = True
+
+[mypy-sklearn.*]
+ignore_missing_imports = True
+
+[mypy-matplotlib.*]
+ignore_missing_imports = True
+
+[mypy-numba.*]
+ignore_missing_imports = True
+
+[mypy-decorator.*]
+ignore_missing_imports = True
+
+[mypy-joblib.*]
+ignore_missing_imports = True
+
+[mypy-pooch.*]
+ignore_missing_imports = True
+
+[mypy-lazy_loader.*]
+ignore_missing_imports = True
+
+[mypy-soxr.*]
+ignore_missing_imports = True
+
+[mypy-msgpack.*]
+ignore_missing_imports = True
+
+[mypy-pkg_resources.*]
+ignore_missing_imports = True
+
+[mypy-packaging.*]
+ignore_missing_imports = True
+
