--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
             activate-environment: test
             channel-priority: ${{ matrix.channel-priority }}
             environment-file: ${{ matrix.envfile }}
-            use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
+            use-only-tar-bz2: false # IMPORTANT: This needs to be set for caching to work properly!
 
         - name: Conda info
           shell: bash -l {0}
