--- a/.github/environment-docs.yml
+++ b/.github/environment-docs.yml
@@ -20,7 +20,7 @@ dependencies:
   - pooch>=1.0.0
   - packaging>=20.0
   - matplotlib>=3.5
-  - sphinx>=5.1.0
+  - sphinx>=5.1.0,<6
   - msgpack-python>=1.0
   - sphinx-gallery>=0.10.1
   - sphinx_rtd_theme>=1.0.0
