--- a/setup.cfg
+++ b/setup.cfg
@@ -69,7 +69,7 @@ librosa =
 [options.extras_require]
 docs =
     numpydoc
-    sphinx != 1.3.1
+    sphinx != 1.3.1,<6
     sphinx_rtd_theme==1.*
     numba >= 0.51
     matplotlib >= 3.3.0
