redoing 0.10.0.post1 release

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ packages = find:
 include_package_data = True
 install_requires =
     audioread >= 2.1.9
-    numpy >= 1.20.3
+    numpy >= 1.20.3, != 1.22.0, != 1.22.1, != 1.22.2
     scipy >= 1.2.0
     scikit-learn >= 0.20.0
     joblib >= 0.14
