--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ install_requires =
     decorator >= 4.3.0
     numba >= 0.51.0
     soundfile >= 0.12.1
-    pooch >= 1.0
+    pooch >= 1.0, < 1.7
     soxr >= 0.3.2
     typing_extensions >= 4.1.1
     lazy_loader >= 0.1
